@@ -30,3 +30,4 @@ carboxylase     Rank abundance distribution for RuBisCO and acetyl-CoA carboxyla
 AkDi            Henry's constant of dissolved gases
 comproportionation  Gibbs energy of sulfur comproportionation
 Pourbaix        Eh-pH diagram for Fe-O-H with equisolubility lines
+E_coli          Gibbs energy of biomass synthesis in E. coli
